[gd_scene load_steps=5 format=3 uid="uid://r2k1hf583lo6"]

[ext_resource type="Script" uid="uid://dfxd3be6lmrrm" path="res://scenes/world/delivery_interactable.gd" id="1_0s0h2"]
[ext_resource type="PackedScene" uid="uid://ld17blvffcfp" path="res://assets/Art/3d/Chest/chest.tscn" id="1_ddqyk"]
[ext_resource type="FontFile" uid="uid://d2g5kua0l6cp5" path="res://assets/HechoAMano-Regular.ttf" id="3_gvwsr"]

[sub_resource type="SphereShape3D" id="SphereShape3D_0s0h2"]
radius = 3.0

[node name="DeliveryInteractable" type="Node3D"]
script = ExtResource("1_0s0h2")

[node name="Chest" parent="." instance=ExtResource("1_ddqyk")]

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_0s0h2")

[node name="CooldownTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 10.0

[node name="CooldownLabel" type="Label3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
visible = false
billboard = 1
render_priority = 1
outline_render_priority = 0
text = "3.5"
font = ExtResource("3_gvwsr")
font_size = 172
outline_size = 32

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
